2003-10-12 Bernhard Held <bernhard@bernhardheld.de>

	* src/mcs51/gen.c (genCpl): fixed bug
	http://sf.net/mailarchive/message.php?msg_id=6263915

2003-10-10 Bernhard Held <bernhard@bernhardheld.de>

	* src/SDCCast.c (decorateType): added extended constant folding
	* src/SDCCsymt.c (computeType): cleanup
	* src/SDCCval.c (valShift): minor optimization
	* support/regression/tests/ast_constant_folding.c: added

2003-10-09  Erik Petrich <epetrich@ivorytower.norman.ok.us>

	* src/SDCCmain.c: removed some unintended changes

2003-10-09  Erik Petrich <epetrich@ivorytower.norman.ok.us>

	* src/SDCCmain.c (setParseWithComma): fixed bug #816685
	* src/z80/gen.c: fixed part of bug #817589
	* src/SDCCsymt.c (checkFunction): fixed bug #817895

2003-10-08 Bernhard Held <bernhard@bernhardheld.de>

	Replaced cast (void **) with (void *) to avoid gcc 3 warning:
	* src/SDCCcflow.c
	* src/SDCCcse.c
	* src/SDCCdflow.c
	* src/SDCClabel.c
	* src/SDCClrange.c
	* src/SDCCmem.c
	* src/SDCCopt.c
	* src/SDCCpeeph.c
	* src/SDCCset.c
	* src/avr/ralloc.c
	* src/ds390/ralloc.c
	* src/izt/ralloc.c
	* src/mcs51/ralloc.c
	* src/pic/ralloc.c
	* src/pic16/ralloc.c
	* src/xa51/ralloc.c
	* src/z80/ralloc.c
	* src/z80/gen.c: removed unused label "release:"

2003-10-06  Borut Razem <borut.razem@siol.net>

	* src/SDCC.lex: removed definition of unused variables
	  save_optimize and save_options

2003-10-06 Bernhard Held <bernhard@bernhardheld.de>

	* clean.mk: removed '=' in "-maxdepth=1"
	* src/SDCCloop.c: replace LRKLAUS with SDCC_LRKLAUS
	* src/SDCClrange.c: replace LRKLAUS with SDCC_LRKLAUS

2003-10-06  Borut Razem <borut.razem@siol.net>

	* src/SDCC.lex, src/SDCC.lex: use dbuf for "_asm" definitions;
	  my_unput() replaced by unput()

2003-10-05 Bernhard Held <bernhard@bernhardheld.de>

	* src/SDCCloop.c (assignmentsToSym, loopInduction): cast argument of
	setToNull() to (void *) to avoid gcc3.x's warning: "dereferencing
	type-punned pointer will break strict-aliasing rules"