@@ -19,6 +19,8 @@ SOURCES = _atoi.c _atol.c _autobaud.c _bp.c _schar2fs.c \
           _divulong.c _fs2schar.c _fs2sint.c _fs2slong.c \
           _fs2uchar.c _fs2uint.c _fs2ulong.c _fsadd.c \
           _fsdiv.c _fseq.c _fsgt.c _fslt.c _fsmul.c \
+          fabsf.c sqrtf.c logf.c log10f.c powf.c tanf.c \
+          errno.c frexpf.c ldexpf.c tancotf.c \
           _fsneq.c _fssub.c _gptrget.c _gptrput.c \
           _sint2fs.c _iscntrl.c _isdigit.c _isgraph.c \
           _islower.c _isprint.c _ispunct.c _isspace.c \
