@@ -1,3 +1,10 @@
+2003-10-13 Bernhard Held <bernhard@bernhardheld.de>
+
+	* device/lib/logf.c: "fixed" overlay bug
+	* support/regression/ports/host/spec.mk: added m library
+	* support/regression/ports/mcs51-stack-auto/spec.mk: added float funcs
+	* support/regression/tests/float_trans: added (for Eric)
+
 2003-10-12 Bernhard Held <bernhard@bernhardheld.de>
 
 	* src/mcs51/gen.c (genCpl): fixed bug
